--- a/notebooks/figures/Compare Troup.ipynb
+++ b/notebooks/figures/Compare Troup.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -29,10 +27,10 @@
     "from thejoker.plot import plot_rv_curves\n",
     "\n",
     "from twoface.config import TWOFACE_CACHE_PATH\n",
-    "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, RedClump,\n",
+    "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar,\n",
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "from twoface.data import APOGEERVData\n",
-    "from twoface.plot import plot_data_orbits\n",
+    "from twoface.plot import plot_data_orbits, plot_two_panel\n",
     "from twoface.mass import m2_func\n",
     "\n",
     "from twobody import KeplerOrbit"
@@ -55,10 +53,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "troup = ascii.read('../../../papers/thejoker-paper/data/troup16-dr12.csv', format='commented_header')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "figures_path = '../../paper/1-catalog/figures/'"
    ]
   },
   {
@@ -121,7 +132,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# visits = allvisit[allvisit['APOGEE_ID'] == star.apogee_id]\n",
@@ -183,41 +196,39 @@
     "with h5py.File(samples_file) as f:\n",
     "    for i, apogee_id in enumerate(in_):\n",
     "        samples = JokerSamples.from_hdf5(f[apogee_id])\n",
-    "        star = session.query(AllStar).filter(AllStar.apogee_id == apogee_id).limit(1).one()\n",
+    "        star = AllStar.get_apogee_id(session, apogee_id)\n",
     "        data = star.apogeervdata(clean=True)\n",
     "        \n",
-    "        print(star.results[0].status)\n",
-    "        \n",
     "        troup_row = troup[troup['APOGEE_ID'] == apogee_id]\n",
+    "        troup_orb = troup_to_orbit(troup_row)\n",
     "        \n",
-    "        # plot\n",
-    "        fig = plt.figure(figsize=(15, 5))\n",
-    "        gs = GridSpec(1, 3)\n",
-    "        ax1 = fig.add_subplot(gs[:2])\n",
-    "        ax2 = fig.add_subplot(gs[2])\n",
-    "\n",
-    "        fig = plot_data_orbits(data, samples, ax=ax1, xlim_choice='tight')\n",
-    "        orb2 = troup_to_orbit(troup_row)\n",
+    "        fig = plot_two_panel(star, samples, title=star.apogee_id,\n",
+    "                             plot_data_orbits_kw=dict(highlight_P_extrema=False, \n",
+    "                                                      n_times=16384, \n",
+    "                                                      plot_kwargs=dict(color='#666666')))\n",
+    "        ax1, ax2 = fig.axes\n",
+    "    \n",
+    "        # over-plot Troup orbit\n",
     "        t2 = Time(np.linspace(*ax1.get_xlim(), 10000), format='mjd')\n",
-    "        ax1.plot(t2.mjd, orb2.radial_velocity(t2).to(u.km/u.s), \n",
+    "        ax1.plot(t2.tcb.mjd, troup_orb.radial_velocity(t2).to(u.km/u.s), \n",
     "                 marker='', color='tab:orange', alpha=0.5)\n",
-    "        ax1.set_title(star.apogee_id)\n",
-    "        \n",
-    "\n",
-    "        ax2.scatter(samples['P'].to(u.day).value, samples['e'], \n",
-    "                    marker='.', alpha=0.5)\n",
     "        ax2.scatter(troup_row['PERIOD'], troup_row['ECC'], \n",
     "                    marker='+', linewidth=2., s=100, color='tab:orange', \n",
     "                    label='Troup')\n",
     "        \n",
-    "        ax2.set_xscale('log', basex=2)\n",
-    "        ax2.set_xlim(0.5, 2**15)\n",
-    "        ax2.set_ylim(0, 1)\n",
-    "        ax2.xaxis.set_ticks(2**np.arange(0, 15+1, 3));\n",
-    "        \n",
-    "        fig.tight_layout()\n",
-    "        fig.savefig(path.join(plot_path, '{0}.png'.format(apogee_id)), dpi=250)\n",
+    "        fig.savefig(path.join(plot_path, '{0}.pdf'.format(apogee_id)))\n",
     "        plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Hand-picked, artisinal comparisons\n",
+    "\n",
+    "I chose these by looking at the full set of plots."
    ]
   },
   {
@@ -227,25 +238,66 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "classes = dict()\n",
+    "classes['unimodal'] = ['2M04411627+5855354', '2M19405532+2401157', '2M03080601+7950502', '2M19134104-0712053']\n",
+    "classes['multimodal'] = ['2M00295684+6356284', '2M19453527+2333077', '2M19114515-0725486', '2M19292561+2626538']\n",
+    "classes['data changed'] = ['2M18591837-0401083', '2M19105197+2845422']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "with h5py.File(samples_file) as f:\n",
+    "    for label, ids in classes.items():\n",
+    "        # fig, axes = plt.subplots(len(ids), 2, figsize=(12, 4*len(ids)))\n",
+    "        fig = plt.figure(figsize=(12, 4*len(ids)))\n",
+    "        gs = GridSpec(len(ids), 3)\n",
+    "    \n",
+    "        for i, apogee_id in enumerate(ids):\n",
+    "            samples = JokerSamples.from_hdf5(f[apogee_id])\n",
+    "            star = AllStar.get_apogee_id(session, apogee_id)\n",
+    "            data = star.apogeervdata(clean=True)\n",
+    "\n",
+    "            troup_row = troup[troup['APOGEE_ID'] == apogee_id]\n",
+    "            troup_orb = troup_to_orbit(troup_row)\n",
+    "            \n",
+    "            ax1 = fig.add_subplot(gs[i, :2])\n",
+    "            ax2 = fig.add_subplot(gs[i, 2])\n",
+    "            axes = [ax1, ax2]\n",
+    "            \n",
+    "            scatter_kw = dict()\n",
+    "            if i == 0:\n",
+    "                scatter_kw['label'] = 'The Joker'\n",
+    "            plot_two_panel(star, samples, axes=axes,\n",
+    "                           plot_data_orbits_kw=dict(highlight_P_extrema=False, \n",
+    "                                                    n_times=16384, \n",
+    "                                                    plot_kwargs=dict(color='tab:blue')),\n",
+    "                           scatter_kw=scatter_kw)\n",
+    "\n",
+    "            # over-plot Troup orbit\n",
+    "            t2 = Time(np.linspace(*ax1.get_xlim(), 10000), format='mjd')\n",
+    "            ax1.plot(t2.tcb.mjd, troup_orb.radial_velocity(t2).to(u.km/u.s), \n",
+    "                     marker='', color='tab:orange', alpha=0.5)\n",
+    "            ax2.scatter(troup_row['PERIOD'], troup_row['ECC'], \n",
+    "                        marker='+', linewidth=2., s=100, color='tab:orange', \n",
+    "                        label='Troup+2016 fit')\n",
+    "            \n",
+    "            if i == 0:\n",
+    "                ax2.legend(loc='upper left', fontsize=16)\n",
+    "            \n",
+    "            # add text\n",
+    "            ylim = ax1.get_ylim()\n",
+    "            yptp = ylim[1] - ylim[0]\n",
+    "            ax1.text(data.t.tcb.mjd.min(), ylim[1]-0.1*yptp, apogee_id, fontsize=20)\n",
+    "\n",
+    "        fig.tight_layout()\n",
+    "        fig.savefig(path.join(figures_path, '{0}.pdf'.format('-'.join(label.split()))))\n",
+    "        plt.close(fig)"
+   ]
   },
   {
    "cell_type": "code",
