--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -54,8 +54,7 @@
 
 \begin{document}\sloppy\sloppypar\raggedbottom\frenchspacing % trust me
 
-\title{Binary companions of red giant stars with APOGEE: \\
-       catalog and companions that survive the common envelope}
+\title{Binary companions of red giant stars with APOGEE DR14}
 
 \author[0000-0003-0872-7098]{Adrian~M.~Price-Whelan}
 \affiliation{Department of Astrophysical Sciences,
@@ -149,7 +148,7 @@ to 1 (e.g., \citealt{Kraus:2008}), and have periods from days to
 millions of years (e.g., \citealt{Raghavan:2010}).
 \todo{multiplicity in general: occurrence rates}
 
-Less is known about uninteracting or detached companions to evolved stars.
+Less is known about non-interacting or detached companions to evolved stars.
 Such systems are interesting because they enable studying extreme outcomes or
 conditions of star formation and multiplicity.
 For example, evolved stars are typically much brighter than their MS
@@ -616,13 +615,41 @@ Catalog.
 
 Some highlights from this catalog.
 
-% \subsection{Differences in companions of RC and RGB stars}
-% \label{sec:rc-rgb}
-
 \section{Discussion}
 
 Return to our various assumptions and make sure that we discuss them
 \emph{by name} here.
+
+\subsection{Comparison to previous work} \label{sec:compare-troup}
+
+Stuff.
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=\textwidth]{unimodal.pdf}
+\end{center}
+\caption{%
+\label{fig:troup-unimodal}
+}
+\end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=\textwidth]{multimodal.pdf}
+\end{center}
+\caption{%
+\label{fig:troup-multimodal}
+}
+\end{figure}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=\textwidth]{data-changed.pdf}
+\end{center}
+\caption{%
+\label{fig:troup-datachanged}
+}
+\end{figure}
 
 \acknowledgements
 
