--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -1,13 +1,32 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-
-%% Created for Adrian Price-Whelan at 2018-02-20 16:54:05 -0500 
+%% Created for Adrian Price-Whelan at 2018-02-22 17:27:48 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{De-Lee:2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013AJ....145..155D},
+	Archiveprefix = {arXiv},
+	Author = {{De Lee}, N. and {Ge}, J. and {Crepp}, J.~R. and {Eastman}, J. and {Esposito}, M. and {Femen{\'{\i}}a}, B. and {Fleming}, S.~W. and {Gaudi}, B.~S. and {Ghezzi}, L. and {Gonz{\'a}lez Hern{\'a}ndez}, J.~I. and {Lee}, B.~L. and {Stassun}, K.~G. and {Wisniewski}, J.~P. and {Wood-Vasey}, W.~M. and {Agol}, E. and {Allende Prieto}, C. and {Barnes}, R. and {Bizyaev}, D. and {Cargile}, P. and {Chang}, L. and {Da Costa}, L.~N. and {Porto De Mello}, G.~F. and {Ferreira}, L.~D. and {Gary}, B. and {Hebb}, L. and {Holtzman}, J. and {Liu}, J. and {Ma}, B. and {Mack}, III, C.~E. and {Mahadevan}, S. and {Maia}, M.~A.~G. and {Nguyen}, D.~C. and {Oravetz}, A. and {Oravetz}, D.~J. and {Paegert}, M. and {Pan}, K. and {Pepper}, J. and {Malanushenko}, E. and {Malanushenko}, V. and {Rebolo}, R. and {Santiago}, B.~X. and {Schneider}, D.~P. and {Shelden Bradley}, A.~C. and {Wan}, X. and {Wang}, J. and {Zhao}, B.},
+	Date-Added = {2018-02-22 22:27:45 +0000},
+	Date-Modified = {2018-02-22 22:27:47 +0000},
+	Doi = {10.1088/0004-6256/145/6/155},
+	Eid = {155},
+	Eprint = {1304.2815},
+	Journal = {\aj},
+	Keywords = {brown dwarfs, stars: individual: GSC 03546-01452},
+	Month = jun,
+	Pages = {155},
+	Primaryclass = {astro-ph.EP},
+	Title = {{Very Low Mass Stellar and Substellar Companions to Solar-like Stars from MARVELS. V. A Low Eccentricity Brown Dwarf from the Driest Part of the Desert, MARVELS-6b}},
+	Volume = 145,
+	Year = 2013,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1088/0004-6256/145/6/155}}
 
 @article{Foreman-Mackey:2014,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
