--- a/notebooks/Debug MCMC continue.ipynb
+++ b/notebooks/Debug MCMC continue.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -29,10 +27,10 @@
     "from thejoker.plot import plot_rv_curves\n",
     "\n",
     "from twoface.config import TWOFACE_CACHE_PATH\n",
-    "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, RedClump,\n",
+    "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, \n",
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "from twoface.data import APOGEERVData\n",
-    "from twoface.plot import plot_data_orbits\n",
+    "from twoface.plot import plot_data_orbits, plot_mcmc_diagnostic, plot_phase_fold\n",
     "from twoface.samples_analysis import unimodal_P"
    ]
   },
@@ -62,13 +60,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "run = session.query(JokerRun).filter(JokerRun.name == 'apogee-jitter').one()\n",
     "params = run.get_joker_params()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -77,6 +80,134 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('../cache/emcee/model.pickle', 'rb') as f:\n",
+    "    model = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "star = AllStar.get_apogee_id(session, '2M03002442+4423109')\n",
+    "data = star.apogeervdata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(samples_file, 'r') as f:\n",
+    "    samples = JokerSamples.from_hdf5(f[star.apogee_id])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = plot_data_orbits(data, samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = TheJokerMCMCModel(params, data)\n",
+    "params2 = JokerParams(params.P_min, params.P_max, jitter_unit=u.m/u.s, jitter=(8.5, 0.9))\n",
+    "model = TheJokerMCMCModel(params2, data)\n",
+    "sams = samples[0]\n",
+    "pars = model.pack_samples(sams)\n",
+    "print(model.ln_likelihood(pars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pars = model.pack_samples(sams)\n",
+    "print(model.ln_posterior(model.to_mcmc_params(pars)))\n",
+    "\n",
+    "pars[0] = np.exp(8.)\n",
+    "pars[4] = 1.\n",
+    "print(model.ln_posterior(model.to_mcmc_params(pars)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "with schwimmbad.MultiPool() as pool:\n",
+    "    # joker = TheJoker(params)\n",
+    "    joker = TheJoker(params2)\n",
+    "    model, mcmc_samples, sampler = joker.mcmc_sample(data, samples[0], \n",
+    "                                                     n_steps=8192, n_burn=0, \n",
+    "                                                     return_sampler=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = plot_mcmc_diagnostic(sampler.chain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "derps = model.unpack_samples_mcmc(sampler.chain[:, -1])\n",
+    "derps.t0 = data.t0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = plot_phase_fold(star, derps[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = plot_data_orbits(data, derps, xlim_choice='tight', highlight_P_extrema=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# needs mcmc\n",
@@ -320,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
