--- a/notebooks/apogee-jitter results.ipynb
+++ b/notebooks/apogee-jitter results.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -30,10 +28,10 @@
     "from thejoker.plot import plot_rv_curves\n",
     "\n",
     "from twoface.config import TWOFACE_CACHE_PATH\n",
-    "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, RedClump,\n",
+    "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, \n",
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "from twoface.data import APOGEERVData\n",
-    "from twoface.plot import plot_data_orbits\n",
+    "from twoface.plot import plot_data_orbits, plot_two_panel, plot_phase_fold\n",
     "from twoface.mass import m2_func\n",
     "from twoface.samples_analysis import unimodal_P"
    ]
@@ -76,6 +74,129 @@
    "outputs": [],
    "source": [
     "n_samples, = session.query(JokerRun.requested_samples_per_star).filter(JokerRun.name == 'apogee-jitter').one()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "HACK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "stars = session.query(AllStar).join(StarResult, JokerRun, Status).filter(Status.id == 4).all()\n",
+    "apogee_ids = np.array([star.apogee_id for star in stars])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "unimodals = []\n",
+    "kurtosis = []\n",
+    "skewness = []\n",
+    "with h5py.File(samples_file, 'r') as f:\n",
+    "    for star in stars:\n",
+    "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "        P_uni = unimodal_P(samples, star.apogeervdata())\n",
+    "        unimodals.append(P_uni)\n",
+    "        \n",
+    "        lnP = np.log(samples['P'].value)\n",
+    "        \n",
+    "        # ~kurtosis\n",
+    "        pers = np.percentile(lnP, [2.5, 97.5, 16, 84])\n",
+    "        diffs = pers[1::2] - pers[::2]\n",
+    "        kurtosis.append(diffs[1] / diffs[0])\n",
+    "        \n",
+    "        # ~skewness\n",
+    "        Q1, Q2, Q3 = np.percentile(lnP, [25, 50, 75])\n",
+    "        skewness.append( (Q3+Q1-2*Q2) / (Q3-Q1) )\n",
+    "\n",
+    "unimodals = np.array(unimodals)\n",
+    "kurtosis = np.array(kurtosis)\n",
+    "skewness = np.array(skewness)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unimodals.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "ax.scatter(kurtosis, skewness, marker='.', linewidth=0, alpha=0.2, s=3)\n",
+    "ax.scatter(0.5, 0.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = (np.abs(kurtosis-0.5) < 0.01) & np.abs(skewness < 0.01)\n",
+    "test.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5py.File(samples_file) as f:\n",
+    "    for apogee_id in apogee_ids[test][:5]:\n",
+    "        star = AllStar.get_apogee_id(session, apogee_id)\n",
+    "        data = star.apogeervdata()\n",
+    "        samples = JokerSamples.from_hdf5(f[apogee_id])\n",
+    "        fig = plot_two_panel(data, samples, plot_data_orbits_kw=dict(xlim_choice='tight'))\n",
+    "        \n",
+    "        lnP = np.log(samples['P'].value)\n",
+    "        pers = np.percentile(lnP, [2.5, 97.5, 16, 84])\n",
+    "        diffs = pers[1::2] - pers[::2]\n",
+    "        fig.axes[0].set_title(\"{:.3f}\".format(diffs[1]/diffs[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "with h5py.File(samples_file) as f:\n",
+    "    for apogee_id in apogee_ids[unimodals][20:]:\n",
+    "        star = AllStar.get_apogee_id(session, apogee_id)\n",
+    "        data = star.apogeervdata()\n",
+    "        samples = JokerSamples.from_hdf5(f[apogee_id])\n",
+    "        fig = plot_two_panel(data, samples, plot_data_orbits_kw=dict(xlim_choice='tight'))\n",
+    "        \n",
+    "        lnP = np.log(samples['P'].value)\n",
+    "        pers = np.percentile(lnP, [2.5, 97.5, 16, 84])\n",
+    "        diffs = pers[1::2] - pers[::2]\n",
+    "        fig.axes[0].set_title(\"{:.3f}\".format(diffs[1]/diffs[0]))"
    ]
   },
   {
@@ -164,9 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# needs more samples\n",
@@ -192,41 +311,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "star = stars2[60]\n",
+    "os.makedirs('../plots/needs-mcmc', exist_ok=True)\n",
     "\n",
     "for star in stars2:\n",
     "    with h5py.File(samples_file) as f:\n",
     "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
-    "\n",
-    "    # compute minimum companion mass\n",
-    "    if star.martig_filter:\n",
-    "        m2_mins = []\n",
-    "        for i in range(len(samples)):\n",
-    "            orbit = samples.get_orbit(i)\n",
-    "            res = root(m2_func, x0=10, args=(star.martig_mass, 1., orbit.m_f.value))\n",
-    "            m2_mins.append(res.x[0])\n",
-    "        m2_mins = m2_mins*u.Msun\n",
-    "        # print('m1 = {0:.3f}'.format(star.martig_mass*u.Msun))\n",
-    "        # print('m2 = {0:.3f}, {1:.2f}'.format(np.mean(m2_mins), np.mean(m2_mins).to(u.Mjup)))\n",
-    "        m1 = star.martig_mass*u.Msun\n",
-    "        m2 = np.mean(m2_mins)\n",
-    "\n",
-    "    else:\n",
-    "        m1 = None\n",
-    "        m2 = None\n",
-    "\n",
-    "    # acceleration percentile\n",
-    "    acc = acc_per[all_apogee_ids == star.apogee_id][0] * K_unit/P_unit\n",
-    "\n",
-    "    fig = make_two_panel(star, m1=m1, m2=m2, acc=acc)\n",
+    "    data = star.apogeervdata()\n",
+    "    \n",
+    "    fig = plot_two_panel(data, samples)\n",
     "    fig.savefig('../plots/needs-mcmc/{0}-2panel.png'.format(star.apogee_id), dpi=200)\n",
     "    \n",
-    "    fig = make_phase_fold(star)\n",
+    "    fig = plot_phase_fold(data, samples[0])\n",
     "    fig.savefig('../plots/needs-mcmc/{0}-residual.png'.format(star.apogee_id), dpi=200)\n",
     "    \n",
     "    plt.close('all')"
@@ -1061,7 +1159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
