--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -396,7 +396,7 @@ must occur under very constraining data.
 % Examples of outputs and etc.
 
 \subsection{Individual-system posterior samplings}
-\label{sec:initsampling}
+\label{sec:samplings}
 
 \todo{Explain that this is the procedure, but two full runs described below in results...}
 
@@ -515,82 +515,16 @@ data products: If the catalog uncertainties are significantly underestimated, we
 expect the inferred log-excess-variance distribution parameters to tend towards
 larger values.
 
-\todo{Move math to appendix since we cite relevant papers that show how?}
 In detail, we maximize the marginal likelihood of the population-level
-parameters $\bs{\alpha} = (\mu_y, \sigma_y)$.
+parameters $(\mu_y, \sigma_y)$.
 We compute this marginal likelihood using the per-object posterior samples
-re-weighted by the ratio of the value of the hyperprior evaluated at a given
-vector $\bs{\alpha}$ over the value of the default prior at the previously
-assumed values, $\bs{\alpha}_0 = (\mu_{y,0}, \sigma_{y,0})$ (see
-\sectionname~\ref{sec:initsampling}).
+re-weighted by the ratio of the value of the hyperprior evaluated at a given,
+new set of parameters $(\mu_y, \sigma_y)$ over the value of the default prior at
+the previously assumed values, $(\mu_{y,0}, \sigma_{y,0})$ (see above).
 This trick has been used in other hierarchical inferences as a way to
-marginalize over the per-object parameters
+marginalize over the per-object parameters to infer population-level parameters
 (\citealt{Hogg:2010,Foreman-Mackey:2014}); we describe how to compute the
-marginal likelihood in detail below.
-
-For each $n$ of $N$ RGB stars in APOGEE, we obtain $K$ posterior samples over
-primary orbital parameters $\bs{\theta} = (P, e, \omega, M_0, K, v_0)$ and the
-excess-variance parameter, $y = \ln s^2$, using \thejoker; For brevity in
-expressions below, we will use the vector
-\begin{equation}
-    \bs{w} = (\bs{\theta}, y)
-\end{equation}
-to represent the full set of parameters.
-To obtain this sampling, we use an interim (Gaussian) prior on the
-excess-variance parameter parametrized by a mean and standard deviation, i.e.
-$\alpha_0 = (\mu_{y,0}, \sigma_{y,0})$ as described above.
-For a given source, the posterior samples in the above parameters are drawn from
-the distribution
-\begin{equation}
-    \bs{w}_k \sim p(\bs{w}_k \given D, \bs{\alpha}_0)
-\end{equation}
-where $D$ represents the data for a given object.
-
-We want to compute the likelihood of all data from all $N$ stars, $\{D_n\}$,
-given a new set of hyperparameters $\bs{\alpha}$
-\begin{equation}
-    p(\{D_n\} \given \bs{\alpha}) = \prod_n^N p(D_n \given \bs{\alpha})
-\end{equation}
-where in the above, we have assumed that this likelihood is separable ( the data
-for each source are independent).
-The per-source marginal likelihood in the above expression is given by
-\begin{align}
-    p(D_n \given \bs{\alpha}) &= \int \dd \bs{w}_n \, p(D_n \given \bs{w}_n) \,
-      p(\bs{w}_n \given \bs{\alpha})\\
-    &= \int \dd \bs{w}_n \, p(D_n \given \bs{w}_n) \, p(\bs{w}_n \given \bs{\alpha}) \,
-      \frac{p(\bs{w}_n \given D_n, \bs{\alpha}_0)}{p(\bs{w}_n \given D_n, \bs{\alpha}_0)}\\
-    &= p(D_n \given \bs{\alpha}_0) \, \int \dd \bs{w}_n \,
-      \frac{p(\bs{w}_n \given \bs{\alpha})}{p(\bs{w}_n \given \bs{\alpha}_0)} \,
-      p(\bs{w}_n \given D_n, \bs{\alpha}_0) \label{eq:marglike} \quad .
-\end{align}
-Using the Monte Carlo integration approximation, \eqname~\ref{eq:marglike} can
-be simplified to a sum over prior value ratios of the $K$ posterior samples in
-the log-excess-variance parameter for each $n$ star
-\begin{equation}
-    \approx \frac{\mathcal{Z}_n}{K} \,
-      \sum_k^{K} \frac{p(y_{nk} \given \bs{\alpha})}{p(y_{nk} \given \bs{\alpha}_0)}
-\end{equation}
-where we have canceled the other priors (over $\bs{\theta}$), and all
-normalization constants appear in the constant scale factor $\mathcal{Z}_n$.
-
-The above expresion gives the marginal likelihood of the velocity data for a single source given new hyperparameters $\bs{\alpha}$.
-The full marginal likelihood is then the product of these individual likelihoods
-\begin{align}
-    p(\{D_n\} \given \alpha) &\propto \prod_n^N \frac{1}{K} \,
-      \sum_k^{K} \frac{p(y_{nk} \given \alpha)}{p(y_{nk} \given \alpha_0)}
-      \quad .
-\end{align}
-In practice, we evaluate the log-marginal-likelihood
-\begin{align}
-    \ln p(\{D_n\} \given \alpha) &\propto \sum_n^N \left[
-      \ln\left( \sum_k^{K} \frac{p(y_{nk} \given \alpha)}{p(y_{nk} \given \alpha_0)} \right)
-      - \ln K\right]\label{eq:lnlike}\\
-    &\propto \sum_n^N \left[
-      \underset{k}{\textrm{logsumexp}}\left[ \ln{p(y_{nk} \given \alpha)} - \ln{p(y_{nk} \given \alpha_0)} \right]
-      - \ln K\right]
-\end{align}
-where $\textrm{logsumexp}$ (the log-sum-exp trick) provides a more stable
-estimate of the sum in \eqname~\ref{eq:lnlike}.
+marginal likelihood in detail in \sectionname~\ref{sec:hierarch}.
 
 We use 1,825 stars with $>10$ visits and $\log g < 2$ (to avoid upper RGB stars
 that have large intrinsic jitter) and maximize the above likelihood to determine
@@ -751,5 +685,73 @@ University Office of Information Technology's Research Computing department.
 
 \bibliographystyle{aasjournal}
 \bibliography{refs}
+
+\appendix
+\section{Hierarchical inference of the excess variance parameter}
+\label{sec:hierarch}
+
+For each $n$ of $N$ RGB stars in APOGEE, we obtain $K$ posterior samples over
+primary orbital parameters $\bs{\theta} = (P, e, \omega, M_0, K, v_0)$ and the
+excess-variance parameter, $y = \ln s^2$, using \thejoker; For brevity in
+expressions below, we will use the vector
+\begin{equation}
+    \bs{w} = (\bs{\theta}, y)
+\end{equation}
+to represent the full set of parameters.
+To obtain this sampling, we use an interim (Gaussian) prior on the
+excess-variance parameter parametrized by a mean and standard deviation, i.e.
+$\alpha_0 = (\mu_{y,0}, \sigma_{y,0})$ as described above.
+For a given source, the posterior samples in the above parameters are drawn from
+the distribution
+\begin{equation}
+    \bs{w}_k \sim p(\bs{w}_k \given D, \bs{\alpha}_0)
+\end{equation}
+where $D$ represents the data for a given object.
+
+We want to compute the likelihood of all data from all $N$ stars, $\{D_n\}$,
+given a new set of hyperparameters $\bs{\alpha}$
+\begin{equation}
+    p(\{D_n\} \given \bs{\alpha}) = \prod_n^N p(D_n \given \bs{\alpha})
+\end{equation}
+where in the above, we have assumed that this likelihood is separable ( the data
+for each source are independent).
+The per-source marginal likelihood in the above expression is given by
+\begin{align}
+    p(D_n \given \bs{\alpha}) &= \int \dd \bs{w}_n \, p(D_n \given \bs{w}_n) \,
+      p(\bs{w}_n \given \bs{\alpha})\\
+    &= \int \dd \bs{w}_n \, p(D_n \given \bs{w}_n) \, p(\bs{w}_n \given \bs{\alpha}) \,
+      \frac{p(\bs{w}_n \given D_n, \bs{\alpha}_0)}{p(\bs{w}_n \given D_n, \bs{\alpha}_0)}\\
+    &= p(D_n \given \bs{\alpha}_0) \, \int \dd \bs{w}_n \,
+      \frac{p(\bs{w}_n \given \bs{\alpha})}{p(\bs{w}_n \given \bs{\alpha}_0)} \,
+      p(\bs{w}_n \given D_n, \bs{\alpha}_0) \label{eq:marglike} \quad .
+\end{align}
+Using the Monte Carlo integration approximation, \eqname~\ref{eq:marglike} can
+be simplified to a sum over prior value ratios of the $K$ posterior samples in
+the log-excess-variance parameter for each $n$ star
+\begin{equation}
+    \approx \frac{\mathcal{Z}_n}{K} \,
+      \sum_k^{K} \frac{p(y_{nk} \given \bs{\alpha})}{p(y_{nk} \given \bs{\alpha}_0)}
+\end{equation}
+where we have canceled the other priors (over $\bs{\theta}$), and all
+normalization constants appear in the constant scale factor $\mathcal{Z}_n$.
+
+The above expresion gives the marginal likelihood of the velocity data for a single source given new hyperparameters $\bs{\alpha}$.
+The full marginal likelihood is then the product of these individual likelihoods
+\begin{align}
+    p(\{D_n\} \given \alpha) &\propto \prod_n^N \frac{1}{K} \,
+      \sum_k^{K} \frac{p(y_{nk} \given \alpha)}{p(y_{nk} \given \alpha_0)}
+      \quad .
+\end{align}
+In practice, we evaluate the log-marginal-likelihood
+\begin{align}
+    \ln p(\{D_n\} \given \alpha) &\propto \sum_n^N \left[
+      \ln\left( \sum_k^{K} \frac{p(y_{nk} \given \alpha)}{p(y_{nk} \given \alpha_0)} \right)
+      - \ln K\right]\label{eq:lnlike}\\
+    &\propto \sum_n^N \left[
+      \underset{k}{\textrm{logsumexp}}\left[ \ln{p(y_{nk} \given \alpha)} - \ln{p(y_{nk} \given \alpha_0)} \right]
+      - \ln K\right]
+\end{align}
+where $\textrm{logsumexp}$ (the log-sum-exp trick) provides a more stable
+estimate of the sum in \eqname~\ref{eq:lnlike}.
 
 \end{document}
